--- a/R/processing-code/processingfile-v1.qmd
+++ b/R/processing-code/processingfile-v1.qmd
@@ -1,23 +1,14 @@
 ---
-title: "An example cleaning script"
-author: "Andreas Handel"
-date: "2023-01-03"
+title: "Data Processing"
+author: "Mutsa Nyamuranga"
+date: "2024-02-23"
 output: html_document
 ---
 
 
-# Processing script
-
-This contains the same code and comments/information as `processingcode.R`.
-
-This just shows it as Quarto file, to give you an idea how to do it in a setup that combines code and text in a single file.
-
-See the other Quarto file for my currently preferred approach of pulling code from the R script into the Quarto file.
-
 
 # Setup
-
-Load needed packages. make sure they are installed.
+In terms of packages, I need to load these set in order to view, explore and clean the raw data from the eLife paper. 
 
 ```{r}
 library(readxl) #for loading Excel files
@@ -30,95 +21,58 @@ library(here) #to set paths
 
 # Data loading
 
-Note that for functions that come from specific packages (instead of base R), I often specify both package and function like so:
-package::function() that's not required one could just call the function specifying the package makes it clearer where the function "lives",
-but it adds typing. You can do it either way.
+With difficulty using the here package for creating a path to the excel document, I have chosen to use the readxl package to directly import the file into the environment. 
 
 ```{r}
-# path to data
-# note the use of the here() package and not absolute paths
-data_location <- here::here("data","raw_data","exampledata.xlsx")
-rawdata <- readxl::read_excel(data_location)
+library(readxl)
+rawdata <- read_excel("~/Desktop/MADA-course/Nyamuranga-MADA-project/data/raw-data/elife-87430-data1-v1.xlsx")
 ```
 
 
 # Check data
 
-First we can look at the codebook
+```{r}
+library(readxl)
+
+range_to_read <- "A4:M24"
+
+# Read the Excel file into a data frame
+figure1a <- read_excel("~/Desktop/MADA-course/Nyamuranga-MADA-project/data/raw-data/elife-87430-data1-v1.xlsx", sheet = "Figure 1-suppl figure 1", range = range_to_read)
+
+summary(figure1a)
+```
+
+#Clean Data
+
+Here I am taking the Figure 1a data table from the paper and clean the data to fit my purposes for analysis. I remove the standard deviation data and fix female and male onto each condition type. 
 
 ```{r}
-codebook <- readxl::read_excel(data_location, sheet ="Codebook")
-print(codebook)
+# Remove specified columns and rows
+figure1a<- figure1a[, -c(3, 5, 7, 9, 11, 13)]
+figure1afixed <- figure1a[-1, ]
+
+# Fixing Female and Male to condition
+figdata <- figure1afixed %>%
+  rename(BaselineF = Baseline...2,
+         ControlF = Control...4,
+         BetaCaroteneF = `β-carotene...6`,
+         BaselineM = Baseline...8,
+         ControlM = Control...10,
+         BetaCaroM = `β-carotene...12`)
+
+# View the updated data frame
+print(figdata)
+str(figdata)
+summary(figdata)
+glimpse(figdata)
 ```
 
 
-Several ways of looking at the data
-
-```{r}
-dplyr::glimpse(rawdata)
-summary(rawdata)
-head(rawdata)
-skimr::skim(rawdata)
-```
-
-
-
-# Cleaning
-
-By inspecting the data as done above, we find some problems that need addressing:
-
-First, there is an entry for height which says "sixty" instead of a number. 
-Does that mean it should be a numeric 60? It somehow doesn't make sense since the weight is 60kg, which can't happen for a 60cm person (a baby).
-Since we don't know how to fix this, we might decide to remove the person. This "sixty" entry also turned all Height entries into characters instead of numeric. That conversion to character also means that our summary function isn't very meaningful. So let's fix that first.
-
-```{r}
-d1 <- rawdata %>% dplyr::filter( Height != "sixty" ) %>% 
-                  dplyr::mutate(Height = as.numeric(Height))
-skimr::skim(d1)
-hist(d1$Height)
-```
-
-Now we see that there is one person with a height of 6. That could be a typo, or someone mistakenly entered their height in feet. Since we unfortunately don't know, we might need to remove this person, which we'll do here.
-
-```{r}
-d2 <- d1 %>% dplyr::mutate( Height = replace(Height, Height=="6",round(6*30.48,0)) )
-skimr::skim(d2)
-```
-
-Height values seem ok now.
-
-Now let's look at the `Weight` variable. There is a person with weight of 7000, which is impossible, and one person with missing weight.
-To be able to analyze the data, we'll remove those individuals as well.
-
-```{r}
-d3 <- d2 %>%  dplyr::filter(Weight != 7000) %>% tidyr::drop_na()
-skimr::skim(d3)
-```
-
-Now checking the `Gender` variable. Gender should be a categorical/factor variable but is loaded as character. We can fix that with simple base R code to mix things up.
-
-```{r}
-d3$Gender <- as.factor(d3$Gender)  
-skimr::skim(d3)
-```
-
-
-Now we see that there is another NA, but it's not `NA` from R, instead it was loaded as character and is now considered as a category.
-Well proceed here by removing that individual with that NA entry. Since this keeps an empty category for Gender, I'm also using droplevels() to get rid of it.
-
-```{r}
-d4 <- d3 %>% dplyr::filter( !(Gender %in% c("NA","N")) ) %>% droplevels()
-skimr::skim(d4)
-```
 
 
 All done, data is clean now. 
 
 Let's assign at the end to some final variable, this makes it easier to add further cleaning steps above.
-
-```{r}
-processeddata <- d4
-```
 
 
 # Save data 
@@ -131,11 +85,10 @@ See here for some suggestions on how to store your processed data:
 http://www.sthda.com/english/wiki/saving-data-into-r-data-format-rds-and-rdata
 
 ```{r}
+dir.create("/Users/mutsa_n/Desktop/MADA-course/Nyamuranga-MADA-project/data/processed_data/", recursive = TRUE)
 save_data_location <- here::here("data","processed_data","processeddata.rds")
-saveRDS(processeddata, file = save_data_location)
+saveRDS(figdata, file = save_data_location)
 ```
-
-
 
 # Notes
 
