--- a/R/processing-code/processingfile-v1.qmd
+++ b/R/processing-code/processingfile-v1.qmd
@@ -18,28 +18,26 @@ library(skimr) #for nice visualization of data
 library(here) #to set paths
 ```
 
-
 # Data loading
 
 With difficulty using the here package for creating a path to the excel document, I have chosen to use the readxl package to directly import the file into the environment. 
 
 ```{r}
-library(readxl)
-rawdata <- read_excel("~/Desktop/MADA-course/Nyamuranga-MADA-project/data/raw-data/elife-87430-data1-v1.xlsx")
+# path to data
+# note the use of the here() package and not absolute paths
+data_location <- here::here("data/raw-data/elife-87430-data1-v1.xlsx")
+rawdata <- readxl::read_excel(data_location)
 ```
 
 
 # Check data
 
 ```{r}
-library(readxl)
-
 range_to_read <- "A4:M24"
 
-# Read the Excel file into a data frame
-figure1a <- read_excel("~/Desktop/MADA-course/Nyamuranga-MADA-project/data/raw-data/elife-87430-data1-v1.xlsx", sheet = "Figure 1-suppl figure 1", range = range_to_read)
+figure1a <- readxl::read_excel(data_location, sheet ="Figure 1-suppl figure 1" , range = range_to_read)
 
-summary(figure1a)
+print(figure1a)
 ```
 
 #Clean Data
